# OnboardAgent

./: .config.example.env  .gitignore  Makefile  flake.nix  justfile  plan.md  pyproject.toml
scripts/: system_dependencies.sh
sim/: gazebo_classic_dev_env.sh  gazebo_dev_env.sh  pegasus_dev_env.sh
sim/gazebo/: Dockerfile.Gazebo
sim/gazebo/airframes/: 4015_gz_x500_mono_cam_lidar
sim/gazebo/worlds/: bayland.sdf  default.sdf  forest.sdf
sim/gazebo_classic/: Dockerfile.Classic
sim/pegasus/: Dockerfile.Pegasus  isaac_run.sh
sim/pegasus/scripts/: simulation_1.py
src/: config.py  containers.py  coordinator.py  main.py
src/core/: credential_provider.py  drone_controller.py  kinesis_video_manager.py  manual_controller.py  mqtt_manager.py  state_machine.py  stream_analyzer.py  stream_handler.py  upload_manager.py
src/enums/: connection_types.py  detection_object.py  execution_state.py  job_status.py  manual_control_enums.py  uploader_enums.py
src/exceptions/: aioice_exception_patch.py  config_exceptions.py  download_exceptions.py  drone_excetions.py  mqtt_exceptions.py  state_exceptions.py  telemetry_exception.py  upload_exception.py
src/models/: credentials_model.py  drone_coordinates.py  job_document.py  manual_control.py  mission_progress.py  telemetry_data.py  uploader_models.py
src/telemetry/: collector.py  publisher.py
src/utils/: download_handler.py  gst_video_track.py  lte_util.py  zip_manager.py
src/utils/flasher/: bootloader.py  firmware.py  port_detector.py  (+2 more)
tests/unit/: test_collector.py  test_config.py  test_state_machine.py
(+4 files in other folders)
