[project]
name = "onboardagent"
version = "0.1.0"
description = "Onboard controller agent for PX4 companion computers, providing MAVSDK integration and MQTT messaging bridge."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awsiotsdk>=1.24.0",
    "cbor2>=5.7.0",
    "dependency-injector>=4.48.2",
    "loguru>=0.7.3",
    "mavsdk>=3.9.0",
    "mypy>=1.17.1",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "ultralytics>=8.3.228",
    "pygobject-stubs>=2.14.0",
    "pygobject==3.50.0",
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
